# python-elasticsearch-logging

./: .coverage  .gitignore  LICENSE  Pipfile  README.md  setup.cfg
src/elasticsearch-logging-handler/: handlers.py
src/elasticsearch_logging_handler/: __init__.py  _handlers.py  _queue_handler.py  _sending_handler.py  handlers.py  sending_handler.py
tests/: conftest.py  test_no_elastic_exists.py  test_write.py
