[metadata]
name = elasticsearch-logging-handler
version = 0.0.1
author = Bohdan Sydorov
author_email = bodiasyd@gmail.com
url = https://github.com/Mulanir/python-elasticsearch-logging
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Topic :: System :: Logging

[options]
package_dir =
    = src
packages = 
    elasticsearch-logging-handler
install_requires =
    elasticsearch
    pytz
python_requires = >=3.7