[metadata]
name = elasticsearch-logging-handler
version = 0.0.4
author = Bohdan Sydorov
author_email = bodiasyd@gmail.com
description = Minimalistic Elasticsearch logging handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mulanir/python-elasticsearch-logging
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Topic :: System :: Logging

[options]
package_dir =
    = src
packages = find:
install_requires =
    elasticsearch
    pytz
python_requires = >=3.7

[options.packages.find]
where = src