[metadata]
name = elasticsearch-logging-handler
version = 1.0.1
author = Bohdan Sydorov
author_email = bodiasyd@gmail.com
description = Minimalistic Elasticsearch logging handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mulanir/python-elasticsearch-logging
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Topic :: System :: Logging

[options]
package_dir =
    = src
packages = find:
install_requires =
    elasticsearch <8.0.0
    pytz
python_requires = >=3.7

[options.packages.find]
where = src